--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
   "author": "George Kolesnikov <gkolesnikov88@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "config": "^3.3.2",
     "express": "^4.17.1",
+    "express-validator": "^6.6.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.9"
   },
   "devDependencies": {
